fix: issue with canvas not taking full height on mobile

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,5 +1,6 @@
 canvas{
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding: 0;
 }
@@ -27,6 +28,8 @@ canvas{
 /* Mobile only (max-width: 767px) */
 @media only screen and (max-width: 767px) {
   /* styles for mobile devices */
+
+
   h1 {
    
     font-size: 3em;
